--- a/Online Muri/src/input.scss
+++ b/Online Muri/src/input.scss
@@ -22,9 +22,21 @@ $normal-font-size: 18px;
     font-weight: 700;
 }
 
+@mixin onTablet {
+    @media (min-width: 425px) and (max-width: 768px) {
+        @content;
+    }
+}
+
+@mixin onMobile {
+    @media (min-width: 320px) and (max-width: 425px) {
+        @content;
+    }
+}
 
 * {
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 body {
@@ -68,7 +80,7 @@ nav {
         @include flex-box(space-evenly, row);
         gap: 1.5rem;
 
-        .signup{
+        .signup {
             background-color: transparent;
             border: none;
             font-family: $secondary-font;
@@ -77,11 +89,41 @@ nav {
             cursor: pointer;
         }
 
-        .login{
+        .login {
             @include Btn;
             width: 108px;
             height: 47px;
             border-radius: 116px;
+        }
+    }
+}
+
+main {
+    width: 100%;
+    height: 95%;
+    @include flex-box(space-around, row);
+
+    #left-side {
+        width: 50%;
+        object-fit: cover;
+
+        img {
+            width: 100%;
+            object-fit: cover;
+        }
+    }
+    #right-side{
+        .main-text{
+            font-family: $primary-font;
+            font-size: 4rem;
+        }
+    }
+
+    @include onMobile() {
+        @include flex-box(space-around, column);
+        gap: 2rem;
+        #left-side{
+            width: 100%;
         }
     }
 }
