--- a/Online Muri/style.css
+++ b/Online Muri/style.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 body {
@@ -68,6 +69,39 @@ nav #buttons .login {
   width: 108px;
   height: 47px;
   border-radius: 116px;
+}
+
+main {
+  width: 100%;
+  height: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+}
+main #left-side {
+  width: 50%;
+  object-fit: cover;
+}
+main #left-side img {
+  width: 100%;
+  object-fit: cover;
+}
+main #right-side .main-text {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 4rem;
+}
+@media (min-width: 320px) and (max-width: 425px) {
+  main {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    gap: 2rem;
+  }
+  main #left-side {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
