--- a/Online Muri/src/input.scss
+++ b/Online Muri/src/input.scss
@@ -102,6 +102,8 @@ main {
     width: 100%;
     height: 95%;
     @include flex-box(space-around, row);
+    gap: 5rem;
+    margin-top: 3rem;
 
     #left-side {
         width: 50%;
@@ -112,18 +114,58 @@ main {
             object-fit: cover;
         }
     }
-    #right-side{
-        .main-text{
+
+    #right-side {
+        width: 50%;
+
+
+        .main-text {
             font-family: $primary-font;
-            font-size: 4rem;
+            font-size: 103px;
+            font-weight: 900;
+            display: flex;
+            flex-direction: column;
+
+            span {
+                margin: -2rem 0 -1rem;
+            }
         }
+
+        .disc-text {
+            word-wrap: normal;
+            font-size: 18px;
+        }
+
+        button {
+            @include Btn();
+            padding: 1.5rem;
+            border-radius: 45px;
+            margin-top: 3rem;
+        }
+
     }
+
 
     @include onMobile() {
         @include flex-box(space-around, column);
         gap: 2rem;
-        #left-side{
+
+        #left-side {
             width: 100%;
         }
+    }
+}
+
+
+footer {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 18px;
+    overflow: scroll;
+    gap: 0.7rem;
+    img {
+        width: 18px;
     }
 }
