--- a/Online Muri/style.css
+++ b/Online Muri/style.css
@@ -78,6 +78,8 @@ main {
   align-items: center;
   justify-content: space-around;
   flex-direction: row;
+  gap: 5rem;
+  margin-top: 3rem;
 }
 main #left-side {
   width: 50%;
@@ -87,9 +89,33 @@ main #left-side img {
   width: 100%;
   object-fit: cover;
 }
+main #right-side {
+  width: 50%;
+}
 main #right-side .main-text {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 4rem;
+  font-size: 103px;
+  font-weight: 900;
+  display: flex;
+  flex-direction: column;
+}
+main #right-side .main-text span {
+  margin: -2rem 0 -1rem;
+}
+main #right-side .disc-text {
+  word-wrap: normal;
+  font-size: 18px;
+}
+main #right-side button {
+  border: none;
+  background-color: #F8964F;
+  color: white;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 700;
+  padding: 1.5rem;
+  border-radius: 45px;
+  margin-top: 3rem;
 }
 @media (min-width: 320px) and (max-width: 425px) {
   main {
@@ -102,6 +128,19 @@ main #right-side .main-text {
   main #left-side {
     width: 100%;
   }
+}
+
+footer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 18px;
+  overflow: scroll;
+  gap: 0.7rem;
+}
+footer img {
+  width: 18px;
 }
 
 /*# sourceMappingURL=style.css.map */
